# api

./: model.json  model.json.bak  model.pkl  pyproject.toml  render.yaml  render.yaml.bak  requirements.txt  train_model.py
app/: football.py  history.json  main.py  predict.py  smart_bets.py
data/: brasileirao.csv
public/: dashboard.html  history.html  index.html  login.html  profile.html
