[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oddguru-api"
version = "0.1.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "xgboost==2.0.3",
    "pandas==2.1.4",
    "joblib==1.3.2",
    "scikit-learn==1.3.2",
    "requests==2.31.0"
]

[tool.setuptools]
packages = ["app"]

[tool.render]
startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
